modifiche index script style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div>Inizio</div>
+    <header id="headerBranch">
+        Questo è stato creato all'interno del branch dell'header.
+    </header>
+
     <script src="script.js"></script>
 </body>
 </html>
