--- a/index.html
+++ b/index.html
@@ -7,7 +7,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>Inizio</div>
+    <footer>
+        <div class="footer_sx">
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+        </div>
+        <div class="footer_mid">
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+        </div>
+        <div class="footer_dx">
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+            <div>ciao?</div>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
