--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 </head>
 <body>
     <div>Inizio</div>
+
+    <main>
+        <div class="container">
+            <div class="card">
+                <div class="card-header">
+                    <h1>Odio il lunedì</h1>
+                </div>
+                <div class="card-body">
+                    <p>Lorem ipsum dolor Lunedì est. Schifum vita mea est. Sed etiam Php est...</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
+
     <script src="script.js"></script>
 </body>
 </html>
